[package]
edition = "2021"
name = "rp2040-uart-receiver"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
rp2040-hal = "0.10.0"
defmt = "0.3"
defmt-rtt = "0.4"
rp-pico = "0.9"
fugit = "0.3.7"
panic-halt = "0.2.0"
critical-section = "1.1.2"
nb = "1.0.0"
